# xains

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
docs/decisions/: 0001-scope-boundary.md  0002-sync-first-api.md  0003-data-model.md  0004-counterfactual-payload-shape.md  0005-llmresponse-tokens-schema.md  0006-guardrails-and-extraction.md  0007-resolution-at-extraction.md  0008-narrativity-metrics.md  0009-perplexity-providers.md  0010-quickstart-notebook.md  0011-configurable-narrative-rules.md  0012-mode-vocabulary.md  0013-remove-vestigial-config-fields.md  0014-rename-scoring-api-to-grade.md  0015-env-by-default-openai-compatible-key.md  0016-rename-factual-mode-to-feature-importance.md  0017-editable-prompt-templates.md  0018-narrative-generator-abstraction.md  0019-templated-narrative-generator.md  0020-openai-openrouter-providers.md  0021-rename-to-xain.md  0022-rename-to-xains.md  0023-remove-perplexity-from-extraction-grades.md  0024-render-grades-with-arrows.md  0025-remove-readability-from-extraction-grades.md  0026-scored-only-flag-on-render-grades.md  0027-optional-dotenv-extra.md  0028-changed-features-diff.md  0029-counterfactual-tabular-prompt-template.md  0030-templated-cf-generator-and-shared-scenarios.md  0031-single-counterfactual-per-request.md  0032-counterfactual-fidelity-scoring.md  0033-explainer-dispatches-extraction-by-mode.md  0034-coerce-stated-numeric-strings-in-cf-fidelity.md  0035-categorical-canonicalization-at-cf-extraction.md  0036-cf-generation-prompt-states-before-and-after.md  0037-templated-hybrid-generator.md  0038-extract-shared-prompt-block-builders.md  0039-hybrid-tabular-prompt-template.md  0040-hybrid-dual-extraction.md  (+2 more)
notebooks/: 01_quickstart.ipynb  counterfactual_narratives.ipynb  feature_importance_narratives.ipynb
notebooks/data/: german_credit_sample.csv
scripts/: generate_german_credit_sample.py
src/xain/: __init__.py  config.py  explainer.py  types.py
src/xain/generation/: __init__.py  base.py  llm.py  templated.py
src/xain/guardrails/: __init__.py  extraction.py  rules.py  types.py
src/xain/integrations/: __init__.py  feature_importance.py
src/xain/metrics/: __init__.py  coverage.py  fidelity.py  grader.py  narrativity.py  perplexity_api.py  perplexity_hf.py
src/xain/metrics/_internal/: curve_fit.py  perplexity_utils.py  tokenize.py
src/xain/prompts/: __init__.py  base.py  echo.py  feature_importance_tabular.py
src/xain/providers/: __init__.py  anthropic.py  mock.py  openai_compatible.py
src/xainarratives/: __init__.py  config.py  explainer.py  schema.py  types.py
src/xainarratives/generation/: __init__.py  base.py  llm.py  templated.py
src/xainarratives/guardrails/: __init__.py  extraction.py  rules.py  types.py
src/xainarratives/integrations/: __init__.py  feature_importance.py
src/xainarratives/metrics/: __init__.py  coverage.py  fidelity.py  grader.py  narrativity.py  perplexity.py  perplexity_api.py  perplexity_hf.py  scorer.py
src/xainarratives/metrics/_internal/: curve_fit.py  lexicons.py  perplexity_utils.py  tokenize.py
src/xainarratives/metrics/_internal/data/: cause_effect_markers.json  connectives.json
src/xainarratives/prompts/: __init__.py  base.py  echo.py  factual_tabular.py  feature_importance_tabular.py
src/xainarratives/providers/: __init__.py  anthropic.py  base.py  mock.py  openai_compatible.py
src/xains/: __init__.py  _substitution.py  config.py  explainer.py  types.py
src/xains/counterfactuals/: __init__.py  diff.py  scenarios.py
src/xains/generation/: __init__.py  base.py  llm.py  templated.py  templated_counterfactual.py  templated_hybrid.py
src/xains/guardrails/: __init__.py  extraction.py  rules.py  types.py
src/xains/integrations/: __init__.py  feature_importance.py
src/xains/metrics/: __init__.py  counterfactual_fidelity.py  coverage.py  fidelity.py  grader.py  narrativity.py  perplexity_api.py  perplexity_hf.py  render.py
src/xains/metrics/_internal/: curve_fit.py  perplexity_utils.py  tokenize.py
src/xains/prompts/: __init__.py  _blocks.py  base.py  counterfactual_tabular.py  echo.py  feature_importance_tabular.py  hybrid_tabular.py
src/xains/providers/: __init__.py  anthropic.py  base.py  mock.py  openai_compatible.py
tests/: conftest.py
tests/integration/: conftest.py  test_perplexity_api.py  test_providers_anthropic.py  test_providers_openai_compatible.py
tests/integration/cassettes/test_perplexity_api/: test_api_provider_returns_float_for_normal_text.yaml
tests/integration/cassettes/test_providers_anthropic/: test_generate_returns_llmresponse.yaml
tests/unit/: test_config.py  test_counterfactuals_diff.py  test_counterfactuals_scenarios.py  test_explainer.py  test_explainer_guardrails.py  test_generation_llm.py  test_generation_templated.py  test_generation_templated_counterfactual.py  test_generation_templated_hybrid.py  test_guardrails_extraction.py  test_guardrails_extraction_counterfactual.py  test_guardrails_rules.py  test_integrations_feature_importance.py  test_internal_curve_fit.py  test_internal_lexicons.py  test_internal_perplexity_utils.py  test_internal_tokenize.py  test_metrics_counterfactual_fidelity.py  test_metrics_coverage.py  test_metrics_fidelity.py  test_metrics_grade_hybrid.py  test_metrics_grader.py  test_metrics_grader_counterfactual.py  test_metrics_narrativity.py  test_metrics_narrativity_paper.py  test_metrics_perplexity.py  test_metrics_render.py  test_metrics_scorer.py  test_narrativity_grader.py  test_narrativity_scorer.py  test_perplexity_hf.py  test_prompts_blocks.py  test_prompts_counterfactual_tabular.py  test_prompts_echo.py  test_prompts_factual_tabular.py  test_prompts_feature_importance_tabular.py  test_prompts_hybrid_tabular.py  test_providers_anthropic.py  test_providers_mock.py  test_schema.py  (+1 more)
