[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xainarratives"
version = "0.0.1"
description = "Natural-language verbalization of ML model predictions from pre-computed attributions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "xainarratives authors" }]
keywords = ["xai", "explainability", "nlg", "shap", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.6",
]

[project.urls]
Repository = "https://github.com/xainarratives/xainarratives"
Issues = "https://github.com/xainarratives/xainarratives/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/xainarratives"]

[tool.hatch.build.targets.sdist]
include = ["src/xainarratives", "README.md", "LICENSE", "CHANGELOG.md"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802"]  # allow snake_case mirrors of CamelCase in tests

[tool.ruff.format]
quote-style = "double"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true
disallow_any_unimported = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------- Pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "live: tests that call real LLM APIs (skipped by default)",
    "slow: long-running tests",
]

[tool.coverage.run]
source = ["src/xainarratives"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
