[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xains"
version = "0.0.1"
description = "Natural-language verbalization of ML model predictions from pre-computed attributions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Mateusz Cedro", email = "mateusz.cedro@uantwerpen.be" },
    { name = "David Martens", email = "david.martens@uantwerpen.be" },
]
keywords = ["xai", "explainability", "nlg", "shap", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "anthropic>=0.96,<1.0",
    "vcrpy>=8.1,<9",
    "pytest-recording>=0.13,<0.14",
    "textstat>=0.7,<1",
    "nltk>=3.9,<4",
    "scipy>=1.13,<2",
    "transformers>=4.40,<5",
    "torch>=2.0,<3",
    "openai>=1.30,<2",
    "jupyter>=1.1,<2",
    "shap>=0.46,<1",
    "scikit-learn>=1.5,<2",
    "pandas>=2.2,<3",
]
anthropic = [
    "anthropic>=0.96,<1.0",
]
textstat = [
    "textstat>=0.7,<1",
]
narrativity = [
    "nltk>=3.9,<4",
    "scipy>=1.13,<2",
]
perplexity-hf = [
    "transformers>=4.40,<5",
    "torch>=2.0,<3",
]
perplexity-api = [
    "openai>=1.30,<2",
]
openai = [
    "openai>=1.30,<2",
]
notebook = [
    "jupyter>=1.1,<2",
    "shap>=0.46,<1",
    "scikit-learn>=1.5,<2",
    "pandas>=2.2,<3",
]

[project.urls]
Repository = "https://github.com/ADMAntwerp/xains"
Issues = "https://github.com/ADMAntwerp/xains/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/xains"]

[tool.hatch.build.targets.sdist]
include = ["src/xains", "README.md", "LICENSE", "CHANGELOG.md"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802"]  # allow snake_case mirrors of CamelCase in tests
"src/xains/config.py" = ["E501"]  # DEFAULT_NARRATIVE_RULES is a verbatim multi-line paper-quote

[tool.ruff.format]
quote-style = "double"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true
disallow_any_unimported = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["textstat", "textstat.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["nltk", "nltk.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["transformers", "transformers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai", "openai.*"]
ignore_missing_imports = true
# ---------- Pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "live: tests that call real LLM APIs (skipped by default)",
    "slow: long-running tests",
]

[tool.coverage.run]
source = ["src/xains"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
